test unified properties and port fabric 1.18.2 to 1.5